--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,3 +6,8 @@ bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+bind-key -n C-M-j split-window -v
+bind-key -n C-M-k split-window -v \; selectp -U
+bind-key -n C-M-h split-window -h \; selectp -L
+bind-key -n C-M-l split-window -h
