--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,3 +11,6 @@ bind-key -n C-M-j split-window -v -c "#{pane_current_path}"
 bind-key -n C-M-k split-window -v -c "#{pane_current_path}" \; selectp -U
 bind-key -n C-M-h split-window -h -c "#{pane_current_path}" \; selectp -L
 bind-key -n C-M-l split-window -h -c "#{pane_current_path}"
+
+bind-key -n C-UP swap-pane -U
+bind-key -n C-DOWN swap-pane -D
