Simplify resizing panes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,5 +12,10 @@ bind-key -n C-M-k split-window -v -c "#{pane_current_path}" \; selectp -U
 bind-key -n C-M-h split-window -h -c "#{pane_current_path}" \; selectp -L
 bind-key -n C-M-l split-window -h -c "#{pane_current_path}"
 
-bind-key -n C-UP swap-pane -U
-bind-key -n C-DOWN swap-pane -D
+bind-key -n C-UP    resize-pane -U
+bind-key -n C-DOWN  resize-pane -D
+bind-key -n C-RIGHT resize-pane -R
+bind-key -n C-LEFT  resize-pane -L
+
+bind-key -n C-S-UP    swap-pane -U
+bind-key -n C-S-DOWN  swap-pane -D
