Make entering copy mode (for scrolling) easier

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,3 +19,5 @@ bind-key -n C-LEFT  resize-pane -L
 
 bind-key -n C-S-UP    swap-pane -U
 bind-key -n C-S-DOWN  swap-pane -D
+
+bind-key -n C-u copy-mode
