Remove tmux delay on vim ESC

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,4 +20,8 @@ bind-key -n C-LEFT  resize-pane -L
 bind-key -n C-S-UP    swap-pane -U
 bind-key -n C-S-DOWN  swap-pane -D
 
+# copy mode is also used for scrolling; can use mouse or arrow key up
 bind-key -n C-u copy-mode
+
+# default value requires ~0.5 second delay before switching panes after vim ESC
+set -ag escape-time 10 # ms
