--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,20 @@ bind-key -n C-LEFT  resize-pane -L
 bind-key -n C-S-UP    swap-pane -U
 bind-key -n C-S-DOWN  swap-pane -D
 
+# quickly switch sessions by number (0-9)
+# mirroring workflow of switching browser tabs by number
+# is there a way to get "next session" in tmux? probably scriptable...
+bind-key -n M-0 attach -t0
+bind-key -n M-1 attach -t1
+bind-key -n M-2 attach -t2
+bind-key -n M-3 attach -t3
+bind-key -n M-4 attach -t4
+bind-key -n M-5 attach -t5
+bind-key -n M-6 attach -t6
+bind-key -n M-7 attach -t7
+bind-key -n M-8 attach -t8
+bind-key -n M-9 attach -t9
+
 # copy mode is also used for scrolling; can use mouse or arrow key up
 bind-key -n C-u copy-mode
 
