Refine tmux session switching

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,19 +20,19 @@ bind-key -n C-LEFT  resize-pane -L
 bind-key -n C-S-UP    swap-pane -U
 bind-key -n C-S-DOWN  swap-pane -D
 
-# quickly switch sessions by number (0-9)
+# quickly switch sessions by number (0-9), detaching other clients
 # mirroring workflow of switching browser tabs by number
-# is there a way to get "next session" in tmux? probably scriptable...
-bind-key -n M-0 attach -t0
-bind-key -n M-1 attach -t1
-bind-key -n M-2 attach -t2
-bind-key -n M-3 attach -t3
-bind-key -n M-4 attach -t4
-bind-key -n M-5 attach -t5
-bind-key -n M-6 attach -t6
-bind-key -n M-7 attach -t7
-bind-key -n M-8 attach -t8
-bind-key -n M-9 attach -t9
+# creates session if it doesn't already exist
+bind-key -n M-0 new-session -As0
+bind-key -n M-1 new-session -As1
+bind-key -n M-2 new-session -As2
+bind-key -n M-3 new-session -As3
+bind-key -n M-4 new-session -As4
+bind-key -n M-5 new-session -As5
+bind-key -n M-6 new-session -As6
+bind-key -n M-7 new-session -As7
+bind-key -n M-8 new-session -As8
+bind-key -n M-9 new-session -As9
 
 # copy mode is also used for scrolling; can use mouse or arrow key up
 bind-key -n C-u copy-mode
