--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,7 @@
 [user]
   email = joshua.a.neely@gmail.com
   name = JoshuaNeely
+	signingkey = DF4AA7F3C59014ED35F54B78F340F7EE61142BFD
 
 [rebase]
   instructionFormat = (<%ae>) %s
@@ -15,3 +16,7 @@
 # work specific things
 [includeIf "gitdir:~/adtran/"]
   path = ~/.gitconfig-adtran
+[commit]
+	gpgsign = true
+[gpg]
+	program = gpg2
