add spacmacs config

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 !.gitconfig
 !.gitconfig-adtran
 !.gnome-preferences.txt
+!.spacemacs
 
 # for THIS repo, so it can clone right into ~/
 !.gitignore
