remove spacemacs. a few other emacs adjustments

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,3 +38,6 @@ bind-key -n C-u copy-mode
 
 # default value requires ~0.5 second delay before switching panes after vim ESC
 set -ag escape-time 10 # ms
+
+# fix tmux intercepting ctrl-H, needed by emacs
+bind-key -n Bspace send-keys C-h
