--- a/.gitconfig
+++ b/.gitconfig
@@ -17,8 +17,22 @@
 [includeIf "gitdir:~/adtran/"]
   path = ~/.gitconfig-adtran
 
+[includeIf "gitdir:~/git/USSF/"]
+  path = ~/.gitconfig-is4s
+
 [commit]
 	gpgsign = false
 
 [gpg]
 	program = gpg2
+
+[credential]
+	helper = /usr/local/share/gcm-core/git-credential-manager-core
+	# credentialStore = gpg
+	credentialStore = plaintext
+
+[credential "https://dev.azure.com"]
+	useHttpPath = true
+
+[credential "https://gitlab.gc3.io"]
+	provider = generic
