--- a/stow/dot-config/hypr/hyprlock.conf
+++ b/stow/dot-config/hypr/hyprlock.conf
@@ -1,8 +1,10 @@
+general {
+    hide_cursor = false
+}
+
 background {
-    monitor =
-    monitor = DP-1
+    monitor = # matches all monitors?
     path = /home/$USER/wallpapers/night.jpg # supports png, jpg, webp (no animations, though)
-    # color = rgba(25, 20, 20, 0.7)
     color = rgba(0, 0, 0, 0.7)
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
@@ -15,22 +17,8 @@ background {
     # vibrancy_darkness = 0.0
 }
 
-background {
-    monitor =
-    monitor = HDMI-A-1
-    # path = /home/$USER/.config/hypr/wall2.png   # supports png, jpg, webp (no animations, though)
-    path = /home/$USER/wallpapers/night.jpg # supports png, jpg, webp (no animations, though)
-    # color = rgba(25, 20, 20, 0.7)
-    color = rgba(0, 0, 0, 0.7)
-
-    # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
-    blur_passes = 5 # 0 disables blurring
-    blur_size = 4
-    # noise = 0.1
-    # contrast = 0.8916
-    # brightness = 0.8172
-    # vibrancy = 0.1696
-    # vibrancy_darkness = 0.0
+animations {
+    enabled = false
 }
 
 input-field {
@@ -66,9 +54,7 @@ input-field {
 
 label {
     monitor =
-    # text = cmd[update:1000] echo "$(date) $USER"
-    text = cmd[update:1000] echo "$(date) $USER"
-    # text_align = center # center/right or any value for default left. multi-line text alignment inside label container
+    text = cmd[update:5000] echo "$(date +'%r')"
     color = rgba(200, 200, 200, 1.0)
     font_size = 25
     font_family = Noto Sans
