play with translucent windows

--- a/stow/dot-config/hypr/hyprland.conf
+++ b/stow/dot-config/hypr/hyprland.conf
@@ -261,6 +261,10 @@ windowrule = rounding 0, floating:0, onworkspace:w[tv1]
 windowrule = bordersize 0, floating:0, onworkspace:f[1]
 windowrule = rounding 0, floating:0, onworkspace:f[1]
 
+windowrulev2 = opacity 0.9 0.4,class:kitty
+windowrulev2 = opacity 0.9 0.9,class:firefox
+windowrulev2 = opacity 0.9 0.6,class:Emacs
+
 # resize window
 bindse=$mainMod&Shift_L,l,resizeactive,20 0
 bindse=$mainMod&Shift_L,h,resizeactive,-20 0
