rename hyprland init script

--- a/stow/dot-config/hypr/hyprland.conf
+++ b/stow/dot-config/hypr/hyprland.conf
@@ -40,7 +40,7 @@ $browser = firefox
 # Or execute your favorite apps at launch like this:
 
 exec-once = $terminal
-exec-once = bash ~/.config/hypr/start.sh
+exec-once = bash ~/.config/hypr/init-daemons.sh
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 
