--- a/stow/dot-config/hypr/hypridle.conf
+++ b/stow/dot-config/hypr/hypridle.conf
@@ -1,11 +1,24 @@
 general {
-  lock_cmd = pidof hyprlock || hyprlock       # avoid starting multiple hyprlock instances.
+  #lock_cmd = pidof hyprlock || hyprlock       # avoid starting multiple hyprlock instances.
+  lock_cmd = pidof swaylock || swaylock       # avoid starting multiple hyprlock instances.
   before_sleep_cmd = loginctl lock-session    # lock before suspend.
   after_sleep_cmd = hyprctl dispatch dpms on  # to avoid having to press a key twice to turn on the display.
 }
 
+
 listener {
-  timeout = 5
-  on-timeout = notify-send "Gone Idle!"
-  on-resume = notify-send "Welcome Back!"
+  timeout = 20
+  on-timeout = dunstify -r 1 "turning off screen..."
+  on-resume = dunstify -r 1 -t 500 "turning off screen... CANCELED"
+}
+
+listener {
+  timeout = 25
+  on-timeout = hyprctl dispatch dpms off  # turn off screen
+  on-resume = hyprctl dispatch dpms on  # turn on screen
+}
+
+listener {
+  timeout = 25
+  on-timeout = loginctl lock-session
 }
