set up intial workspace apps

--- a/stow/dot-config/hypr/hyprland.conf
+++ b/stow/dot-config/hypr/hyprland.conf
@@ -41,6 +41,7 @@ $browser = firefox
 
 exec-once = $terminal
 exec-once = bash ~/.config/hypr/init-daemons.sh
+exec-once = bash ~/.config/hypr/init-workspaces.sh
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 
