clean hyprland config

--- a/stow/dot-config/hypr/hyprland.conf
+++ b/stow/dot-config/hypr/hyprland.conf
@@ -69,7 +69,7 @@ $mainMod = Alt_L
 bind = $mainMod, Q, killactive
 
 bind = , Super_L, exec, $appLauncher
-#bind = Alt_L, X, exec, $processLauncher
+# bind = Alt_L, X, exec, $processLauncher # conflict with emacs...
 bind = Alt_L, Tab, exec, $windowSwitcher
 bind = Alt_L, P, exec, [workspace 9] kitty vim /etc/nixos/package-configuration.nix # open package config
 
@@ -90,10 +90,6 @@ bind = $mainMod, right, movefocus, r
 bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
-
-bind = $mainMod, up, workspace, 1
-bind = $mainMod, down, workspace, 2
-
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, focusworkspaceoncurrentmonitor, 1
@@ -130,21 +126,6 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
-
-# Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
-
-# Requires playerctl
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
-
 
 ################
 ### MONITORS ###
@@ -286,8 +267,8 @@ master {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = 0
+    disable_hyprland_logo = true
 }
 
 
