run nixos-rebuild desktop app in workspace 9

--- a/stow/dot-local/share/applications/rebuild-nixos.desktop
+++ b/stow/dot-local/share/applications/rebuild-nixos.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=RebuildNixos
 Comment=wrapper around rebuild script
-Exec=hyprctl dispatch exec "kitty $HOME/.local/bin/rebuild-nixos"
+Exec=hyprctl dispatch exec [workspace 9 silent] "kitty $HOME/.local/bin/rebuild-nixos"
 Terminal=true
 Type=Application
 Categories=Utility;
